@@ -79,7 +79,6 @@
 			<label index="tx_seminars_seminars.enough_attendees">Has enough registrations:</label>
 			<label index="tx_seminars_seminars.is_full">Is full:</label>
 			<label index="tx_seminars_seminars.divLabelPayment">Payment</label>
-			<label index="tx_seminars_seminars.prices">Prices:</label>
 			<label index="tx_seminars_seminars.price_regular">Regular price:</label>
 			<label index="tx_seminars_seminars.price_regular_early">Regular price (early bird):</label>
 			<label index="tx_seminars_seminars.price_regular_board">Regular price including full board:</label>
@@ -202,14 +201,6 @@
 			<label index="tx_seminars_categories.icon">Icon:</label>
 			<label index="tx_seminars_skills">Skills</label>
 			<label index="tx_seminars_skills.title">Title:</label>
-			<label index="tx_seminars_prices">Prices</label>
-			<label index="tx_seminars_prices.title">Title:</label>
-			<label index="tx_seminars_prices.value">Value:</label>
-			<label index="tx_seminars_prices.currency">Currency:</label>
-			<label index="tx_seminars_prices.tax">Tax:</label>
-			<label index="tx_seminars_prices.including_tax">Including/excluding Tax:</label>
-			<label index="tx_seminars_prices.including_tax.including">including</label>
-			<label index="tx_seminars_prices.including_tax.excluding">excluding</label>
 			<label index="tt_content.list_type_pi1">Seminar Manager</label>
 			<label index="fe_groups.tx_seminars_publish_events">Publish FE-edited events</label>
 			<label index="fe_groups.tx_seminars_publish_events.I.0">publish immediately</label>
@@ -297,7 +288,6 @@
 			<label index="tx_seminars_seminars.enough_attendees">Hat genug Anmeldungen:</label>
 			<label index="tx_seminars_seminars.is_full">Ist voll:</label>
 			<label index="tx_seminars_seminars.divLabelPayment">Bezahlung</label>
-			<label index="tx_seminars_seminars.prices">Preise:</label>
 			<label index="tx_seminars_seminars.price_regular">Standardpreis:</label>
 			<label index="tx_seminars_seminars.price_regular_early">Standardpreis für Frühbucher:</label>
 			<label index="tx_seminars_seminars.price_regular_board">Standardpreis inklusive Vollpension:</label>
@@ -420,14 +410,6 @@
 			<label index="tx_seminars_categories.icon">Icon:</label>
 			<label index="tx_seminars_skills">Fähigkeiten</label>
 			<label index="tx_seminars_skills.title">Titel:</label>
-			<label index="tx_seminars_prices">Preise</label>
-			<label index="tx_seminars_prices.title">Titel:</label>
-			<label index="tx_seminars_prices.value">Wert:</label>
-			<label index="tx_seminars_prices.currency">Währung:</label>
-			<label index="tx_seminars_prices.tax">Steuer:</label>
-			<label index="tx_seminars_prices.including_tax">Inklusive/exklusive Steuern:</label>
-			<label index="tx_seminars_prices.including_tax.including">inklusive</label>
-			<label index="tx_seminars_prices.including_tax.excluding">exklusive</label>
 			<label index="tt_content.list_type_pi1">Seminar-Manager</label>
 			<label index="fe_groups.tx_seminars_publish_events">Im FE-Editor eingegebene Veranstaltungen</label>
 			<label index="fe_groups.tx_seminars_publish_events.I.0">Veranstaltungen sofort veröffentlichen</label>
@@ -1262,7 +1244,6 @@
 			<label index="tx_seminars_seminars.enough_attendees" type="integer">219975728</label>
 			<label index="tx_seminars_seminars.is_full" type="integer">74563993</label>
 			<label index="tx_seminars_seminars.divLabelPayment" type="integer">205863499</label>
-			<label index="tx_seminars_seminars.prices" type="integer">18679445</label>
 			<label index="tx_seminars_seminars.price_regular" type="integer">240409527</label>
 			<label index="tx_seminars_seminars.price_regular_early" type="integer">216978206</label>
 			<label index="tx_seminars_seminars.price_regular_board" type="integer">76600225</label>
@@ -1375,14 +1356,6 @@
 			<label index="tx_seminars_categories.title" type="integer">85903807</label>
 			<label index="tx_seminars_skills" type="integer">178756701</label>
 			<label index="tx_seminars_skills.title" type="integer">85903807</label>
-			<label index="tx_seminars_prices" type="integer">236379502</label>
-			<label index="tx_seminars_prices.title" type="integer">85903807</label>
-			<label index="tx_seminars_prices.value" type="integer">181254146</label>
-			<label index="tx_seminars_prices.currency" type="integer">124949959</label>
-			<label index="tx_seminars_prices.tax" type="integer">99791745</label>
-			<label index="tx_seminars_prices.including_tax" type="integer">222008293</label>
-			<label index="tx_seminars_prices.including_tax.including" type="integer">129466687</label>
-			<label index="tx_seminars_prices.including_tax.excluding" type="integer">195388725</label>
 			<label index="tt_content.list_type_pi1" type="integer">144163361</label>
 			<label index="tx_seminars_seminars.attached_files" type="integer">62695314</label>
 			<label index="tx_seminars_seminars.details_page" type="integer">196341936</label>
@@ -2190,7 +2163,6 @@
 			<label index="tx_seminars_seminars.partners">Partners:</label>
 			<label index="tx_seminars_seminars.tutors">Tutors:</label>
 			<label index="tx_seminars_seminars.leaders">Leaders:</label>
-			<label index="tx_seminars_seminars.prices">Prices:</label>
 			<label index="tx_seminars_seminars.price_regular">Regular price:</label>
 			<label index="tx_seminars_seminars.price_regular_early">Regular price (early bird):</label>
 			<label index="tx_seminars_seminars.price_regular_board">Regular price including full board:</label>
@@ -2344,14 +2316,6 @@
 			<label index="tx_seminars_categories.title">Title:</label>
 			<label index="tx_seminars_skills">Skills</label>
 			<label index="tx_seminars_skills.title">Title:</label>
-			<label index="tx_seminars_prices">Prices</label>
-			<label index="tx_seminars_prices.title">Title:</label>
-			<label index="tx_seminars_prices.value">Value:</label>
-			<label index="tx_seminars_prices.currency">Currency:</label>
-			<label index="tx_seminars_prices.tax">Tax:</label>
-			<label index="tx_seminars_prices.including_tax">Including/excluding Tax:</label>
-			<label index="tx_seminars_prices.including_tax.including">including</label>
-			<label index="tx_seminars_prices.including_tax.excluding">excluding</label>
 			<label index="tt_content.list_type_pi1">Seminar Manager</label>
 			<label index="tx_seminars_seminars.attached_files">Attached files:</label>
 			<label index="tx_seminars_seminars.details_page">Page with the details view:</label>
